--- a/src/style.css
+++ b/src/style.css
@@ -47,14 +47,39 @@
     .menuOpen {
         width: 30px;
         transition: transform 0.3s ease, opacity 0.3s ease;
-        position: absolute !important;
+        position: absolute;
         top: 20px;
         right: 20px;
         z-index: 9999999;
     }
+
+    header {
+        position: fixed;
+        background-color: #000;
+        width: 100%;
+        top: 0;
+        z-index: 99999;
+    }
+
+    form {
+        width: 100%;
+    }
+
+    .main-form{
+        margin-top: 59px;
+    }
+
 }
 
 @media (max-width: 1025px) {
+    header {
+        position: fixed;
+        background-color: #000;
+        width: 100%;
+        top: 0;
+        z-index: 99999;
+    }
+
     .menu {
         display: block;
     }
@@ -96,6 +121,10 @@
         position: fixed;
         top: 20px;
         right: 20px;
-        z-index: 1000;
+        /* z-index: 1000; */
+    }
+
+    form {
+        width: 100%;
     }
 }
