--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,10 @@
+html,
+body {
+    overflow-x: hidden;
+    position: relative;
+}
+
+
 @media (max-width: 768px) {
     .mobile-nav.show {
         display: block;
@@ -65,7 +72,7 @@
         width: 100%;
     }
 
-    .main-form{
+    .main-form {
         margin-top: 59px;
     }
 
